--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
                 <div class="content__title">Домашние задания</div>
                 <ul class="content__list">
                     <li class="content__list-item">
-                        <a href="lessons69-73/index.html">Уроки 69-73</a>
+                        <a href="maket/index.html">Уроки 69-73</a>
                     </li>
                 </ul>
             </div>
