--- a/maket/index.html
+++ b/maket/index.html
@@ -39,7 +39,7 @@
                     </ul>
                 </nav>
                 <div class="logo">
-                    <img class="logo" src="/img/logo.png" alt="Логотип">
+                    <img class="logo" src="img/logo.png" alt="Логотип">
                 </div>
                 <ul class="header__socials socials">
                     <li class="socials-item">
