--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         <a href="maket/index.html">Уроки 69-73</a>
                     </li>
                     <li class="content__list-item">
-                        <a href="lesson76/index.html">Уроки 69-73</a>
+                        <a href="lesson76/index.html">Урок 76</a>
                     </li>
                 </ul>
             </div>
