--- a/index.html
+++ b/index.html
@@ -101,6 +101,12 @@
                     <li class="content__list-item">
                         <a href="lesson78/index.html">Урок 79</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="lesson80/index.html">Урок 80</a>
+                    </li>
+                    <li class="content__list-item">
+                        <a href="lesson81/index.html">Урок 81</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
