--- a/index.html
+++ b/index.html
@@ -111,6 +111,9 @@
                         <a href="lesson82/index.html">Урок 82</a>
                     </li>
                     <li class="content__list-item">
+                        <a href="lesson82(2)/index.html">Урок 82(2)</a>
+                    </li>
+                    <li class="content__list-item">
                         <a href="lesson83/index.html">Урок 83</a>
                     </li>
                 </ul>
