--- a/index.html
+++ b/index.html
@@ -116,6 +116,9 @@
                     <li class="content__list-item">
                         <a href="lesson83/index.html">Урок 83</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href="lesson88/index.html">Практика событий js</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
