--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
             <div class="sidebar__user">
                 <div class="sidebar__name">Алексей Мамонтов</div>
-                <div class="sidebar__text"><Бедный студент</div>
+                <div class="sidebar__text">Бедный студент</div>
             </div>
             <div class="sidebar__tabs">
                 <div class="sidebar__item">
