--- a/index.html
+++ b/index.html
@@ -119,6 +119,9 @@
                     <li class="content__list-item">
                         <a href="lesson88/index.html">Практика событий js</a>
                     </li>
+                    <li class="content__list-item">
+                        <a href=wakebake/index.html">Wake & Bake</a>
+                    </li>
                 </ul>
             </div>
             <div class="content__block hidden" id="diplomBlock">
