--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                         <a href="lesson88/index.html">Практика событий js</a>
                     </li>
                     <li class="content__list-item">
-                        <a href=wakebake/index.html">Wake & Bake</a>
+                        <a href="wakebake/index.html">Wake & Bake</a>
                     </li>
                 </ul>
             </div>
