--- a/wakebake/index.html
+++ b/wakebake/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wake&Bake</title>
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="stylesheet" href="./css/fonts.css">
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/fonts.css">
 </head>
 
 <body class=" body ">
@@ -16,7 +16,7 @@
             <div class="container">
                 <div class="header-top">
                     <a href="#" class="logo">
-                        <img src="/img/icons/logos/logo-dark.svg" alt="Логотип компании">
+                        <img src="img/icons/logos/logo-dark.svg" alt="Логотип компании">
                     </a>
                     <nav class="nav">
                         <ul class="menu">
@@ -66,10 +66,10 @@
                         </button>
                     </div>
                     <div class="hero-img">
-                        <img src="/img/content/girl.png" alt="Девушка с тортом">
+                        <img src="img/content/girl.png" alt="Девушка с тортом">
                         <div class="hero-img_control">
                             <a class="hero-img_button" data-fslightbox href="media/cake.mp4">
-                                <img src="/img/icons/play.svg" alt="">
+                                <img src="img/icons/play.svg" alt="">
                             </a>
                             Посмотри, как готовятся наши торты
                         </div>
@@ -81,7 +81,7 @@
             <div class="container">
                 <div class="aboutUs-wrapper">
                     <div class="aboutUs-img">
-                        <img src="/img/content/girl-2.jpg" alt="">
+                        <img src="img/content/girl-2.jpg" alt="">
                     </div>
                     <div class="aboutUs-text">
                         <h1 class="aboutUs-title">
@@ -98,7 +98,7 @@
                         <div class="aboutUs-features">
                             <div class="features-block">
                                 <div class="features-icon">
-                                    <img class="features-icon__img" src="/img/icons/hat-1.svg" alt="шляпа">
+                                    <img class="features-icon__img" src="img/icons/hat-1.svg" alt="шляпа">
                                 </div>
                                 <div class="features-text">
                                     Живое общение с наставниками и одногруппниками
@@ -106,7 +106,7 @@
                             </div>
                             <div class="features-block">
                                 <div class="features-icon">
-                                    <img class="features-icon__img" src="/img/icons/hat-1.svg" alt="шляпа">
+                                    <img class="features-icon__img" src="img/icons/hat-1.svg" alt="шляпа">
                                 </div>
                                 <div class="features-text">
                                     Предоставление всех необходимых материалов
@@ -114,7 +114,7 @@
                             </div>
                             <div class="features-block">
                                 <div class="features-icon">
-                                    <img class="features-icon__img" src="/img/icons/hat-1.svg" alt="шляпа">
+                                    <img class="features-icon__img" src="img/icons/hat-1.svg" alt="шляпа">
                                 </div>
                                 <div class="features-text">
                                     Небольшие группы до 6 человек
@@ -122,7 +122,7 @@
                             </div>
                             <div class="features-block">
                                 <div class="features-icon">
-                                    <img class="features-icon__img" src="/img/icons/hat-1.svg" alt="шляпа">
+                                    <img class="features-icon__img" src="img/icons/hat-1.svg" alt="шляпа">
                                 </div>
                                 <div class="features-text">
                                     Большие аудитории для обучения
@@ -136,7 +136,7 @@
         <!-- <footer>
             <div class="container">
                 <div class="footer-logo">
-                    <img src="/img/icons/logos/logo-dark.svg" alt="">
+                    <img src="img/icons/logos/logo-dark.svg" alt="">
                 </div>
             </div>
         </footer>  -->
