--- a/wakebake/index.html
+++ b/wakebake/index.html
@@ -81,10 +81,10 @@
             <div class="container">
                 <div class="aboutUs-wrapper">
                     <div class="aboutUs-img">
-                        <img src="img/content/girl-2.jpg" alt="">
+                        <img src="/img/content/girl-2.jpg" alt="">
                         <div class="aboutUs-img__control">
                             <a class="aboutUs-img__button">
-                                <img src="img/icons/gift.svg" alt="">
+                                <img src="/img/icons/gift.svg" alt="">
                             </a>
                             Нажми на подарок, чтобы получить наш фирменный рецепт
                         </div>
