--- a/wakebake/index.html
+++ b/wakebake/index.html
@@ -16,7 +16,7 @@
             <div class="container">
                 <div class="header-top">
                     <a href="#" class="logo">
-                        <img src="/img/icons/logos/logo-dark.svg" alt="Логотип компании">
+                        <img src="img/icons/logos/logo-dark.svg" alt="Логотип компании">
                     </a>
                     <nav class="nav">
                         <ul class="menu">
@@ -66,10 +66,10 @@
                         </button>
                     </div>
                     <div class="hero-img">
-                        <img src="/img/content/girl.png" alt="Девушка с тортом">
+                        <img src="img/content/girl.png" alt="Девушка с тортом">
                         <div class="hero-img_control">
                             <a class="hero-img_button" data-fslightbox href="media/cake.mp4">
-                                <img src="/img/icons/play.svg" alt="">
+                                <img src="img/icons/play.svg" alt="">
                             </a>
                             Посмотри, как готовятся наши торты
                         </div>
@@ -81,10 +81,10 @@
             <div class="container">
                 <div class="aboutUs-wrapper">
                     <div class="aboutUs-img">
-                        <img src="/img/content/girl-2.jpg" alt="">
+                        <img src="img/content/girl-2.jpg" alt="">
                         <div class="aboutUs-img__control">
                             <a class="aboutUs-img__button">
-                                <img src="/img/icons/gift.svg" alt="">
+                                <img src="img/icons/gift.svg" alt="">
                             </a>
                             Нажми на подарок, чтобы получить наш фирменный рецепт
                         </div>
@@ -104,7 +104,7 @@
                         <div class="aboutUs-features">
                             <div class="features-block">
                                 <div class="features-icon">
-                                    <img class="features-icon__img" src="/img/icons/hat-1.svg" alt="шляпа">
+                                    <img class="features-icon__img" src="img/icons/hat-1.svg" alt="шляпа">
                                 </div>
                                 <div class="features-text">
                                     Живое общение с наставниками и одногруппниками
@@ -112,7 +112,7 @@
                             </div>
                             <div class="features-block">
                                 <div class="features-icon">
-                                    <img class="features-icon__img" src="/img/icons/hat-1.svg" alt="шляпа">
+                                    <img class="features-icon__img" src="img/icons/hat-1.svg" alt="шляпа">
                                 </div>
                                 <div class="features-text">
                                     Предоставление всех необходимых материалов
@@ -120,7 +120,7 @@
                             </div>
                             <div class="features-block">
                                 <div class="features-icon">
-                                    <img class="features-icon__img" src="/img/icons/hat-1.svg" alt="шляпа">
+                                    <img class="features-icon__img" src="img/icons/hat-1.svg" alt="шляпа">
                                 </div>
                                 <div class="features-text">
                                     Небольшие группы до 6 человек
@@ -128,7 +128,7 @@
                             </div>
                             <div class="features-block">
                                 <div class="features-icon">
-                                    <img class="features-icon__img" src="/img/icons/hat-1.svg" alt="шляпа">
+                                    <img class="features-icon__img" src="img/icons/hat-1.svg" alt="шляпа">
                                 </div>
                                 <div class="features-text">
                                     Большие аудитории для обучения
