--- a/wakebake/index.html
+++ b/wakebake/index.html
@@ -69,7 +69,7 @@
                         <img src="img/content/girl.png" alt="Девушка с тортом">
                         <div class="hero-img_control">
                             <a class="hero-img_button" data-fslightbox href="media/cake.mp4">
-                                <img src="img/icons/play.svg" alt="">
+                                <img src="/img/icons/play.svg" alt="">
                             </a>
                             Посмотри, как готовятся наши торты
                         </div>
