--- a/wakebake/index.html
+++ b/wakebake/index.html
@@ -16,7 +16,7 @@
             <div class="container">
                 <div class="header-top">
                     <a href="#" class="logo">
-                        <img src="/img/icons/logos/logo-dark.svg" alt="Логотип компании">
+                        <img src="img/icons/logos/logo-dark.svg" alt="Логотип компании">
                     </a>
                     <nav class="nav">
                         <ul class="menu">
@@ -66,10 +66,10 @@
                         </button>
                     </div>
                     <div class="hero-img">
-                        <img src="/img/content/girl.png" alt="Девушка с тортом">
+                        <img src="img/content/girl.png" alt="Девушка с тортом">
                         <div class="hero-img_control">
                             <a class="hero-img_button" data-fslightbox href="media/cake.mp4">
-                                <img src="/img/icons/play.svg" alt="">
+                                <img src="img/icons/play.svg" alt="">
                             </a>
                             Посмотри, как готовятся наши торты
                         </div>
@@ -105,7 +105,7 @@
                     <div class="aboutUs-features">
                         <div class="features-block">
                             <div class="features-icon">
-                                <img class="features-icon__img" src="/img/icons/hat-1.svg" alt="шляпа">
+                                <img class="features-icon__img" src="img/icons/hat-1.svg" alt="шляпа">
                             </div>
                             <div class="features-text">
                                 Живое общение с наставниками и одногруппниками
@@ -113,7 +113,7 @@
                         </div>
                         <div class="features-block">
                             <div class="features-icon">
-                                <img class="features-icon__img" src="/img/icons/hat-1.svg" alt="шляпа">
+                                <img class="features-icon__img" src="img/icons/hat-1.svg" alt="шляпа">
                             </div>
                             <div class="features-text">
                                 Предоставление всех необходимых материалов
@@ -121,7 +121,7 @@
                         </div>
                         <div class="features-block">
                             <div class="features-icon">
-                                <img class="features-icon__img" src="/img/icons/hat-1.svg" alt="шляпа">
+                                <img class="features-icon__img" src="img/icons/hat-1.svg" alt="шляпа">
                             </div>
                             <div class="features-text">
                                 Небольшие группы до 6 человек
@@ -129,7 +129,7 @@
                         </div>
                         <div class="features-block">
                             <div class="features-icon">
-                                <img class="features-icon__img" src="/img/icons/hat-1.svg" alt="шляпа">
+                                <img class="features-icon__img" src="img/icons/hat-1.svg" alt="шляпа">
                             </div>
                             <div class="features-text">
                                 Большие аудитории для обучения
