--- a/wakebake/index.html
+++ b/wakebake/index.html
@@ -827,6 +827,88 @@
             </div>
         </section>
 
+        <div class="main__gallery gallery" id="gallery">
+            <div class="container">
+                <div class="gallery__inner">
+                    <div class="gallery__img">
+                        <img src="img/decor/cupcakes.png" alt="">
+                    </div>
+                    <div class="gallery__content">
+                        <div class="gallery__info">
+                            <h2 class="gallery__title">
+                                Фотогалерея
+                            </h2>
+                            <p class="gallery__text">
+                                Для комфортного обучения сделаны просторные аудитории, где предоставляется
+                                всё необходимое оборудование. Здесь наши ученики создают кулинарные шедевры
+                                под присмотром опытных наставников
+                            </p>
+                        </div>
+                        <div class="gallery__nav">
+                            <button class="gallery__prev" type="button">
+                                <svg width="14" height="14" viewBox="0 0 14 14" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M7.992 1.00777L2.016 6.98377L7.992 12.9598L6.984 13.9678L-3.0528e-07 6.98377L6.984 -0.000227365L7.992 1.00777Z"
+                                        fill="#FFA55C" />
+                                    <path
+                                        d="M1.0083 7.70312L1.0083 6.26313L13.2483 6.26312L13.2483 7.70312L1.0083 7.70312Z"
+                                        fill="#FFA55C" />
+                                </svg>
+                            </button>
+                            <div class="gallery__pagination"></div>
+                            <button class="gallery__next" type="button">
+                                <svg width="14" height="14" viewBox="0 0 14 14" fill="none"
+                                    xmlns="http://www.w3.org/2000/svg">
+                                    <path
+                                        d="M5.25653 12.96L11.2325 6.984L5.25654 1.008L6.26454 -3.0528e-07L13.2485 6.984L6.26454 13.968L5.25653 12.96Z"
+                                        fill="#FFA55C" />
+                                    <path
+                                        d="M12.2402 6.26465L12.2402 7.70465L0.000234839 7.70465L0.000234902 6.26465L12.2402 6.26465Z"
+                                        fill="#FFA55C" />
+                                </svg>
+
+                            </button>
+                        </div>
+                    </div>
+                </div>
+                <div class="gallery__swiper swiper">
+                    <div class=" gallery__swiper-wrapper swiper-wrapper">
+                        <a data-fslightbox="gallery" href="img/content/gallery/1.jpg" class="gallery__slide swiper-slide">
+                            <img src="img/content/gallery/1.jpg" alt="">
+                        </a>
+                        <a data-fslightbox="gallery" href="img/content/gallery/2.jpg" class="gallery__slide swiper-slide">
+                            <img src="img/content/gallery/2.jpg" alt="">
+                        </a>
+                        <a data-fslightbox="gallery" href="img/content/gallery/3.jpg" class="gallery__slide swiper-slide">
+                            <img src="img/content/gallery/3.jpg" alt="">
+                        </a>
+                        <a data-fslightbox="gallery" href="img/content/gallery/4.jpg" class="gallery__slide swiper-slide">
+                            <img src="img/content/gallery/4.jpg" alt="">
+                        </a>
+                        <a data-fslightbox="gallery" href="img/content/gallery/1.jpg" class="gallery__slide swiper-slide">
+                            <img src="img/content/gallery/1.jpg" alt="">
+                        </a>
+                        <a data-fslightbox="gallery" href="img/content/gallery/2.jpg" class="gallery__slide swiper-slide">
+                            <img src="img/content/gallery/2.jpg" alt="">
+                        </a>
+                        <a data-fslightbox="gallery" href="img/content/gallery/3.jpg" class="gallery__slide swiper-slide">
+                            <img src="img/content/gallery/3.jpg" alt="">
+                        </a>
+                        <a data-fslightbox="gallery" href="img/content/gallery/4.jpg" class="gallery__slide swiper-slide">
+                            <img src="img/content/gallery/4.jpg" alt="">
+                        </a>
+                        <a data-fslightbox="gallery" href="img/content/gallery/1.jpg" class="gallery__slide swiper-slide">
+                            <img src="img/content/gallery/1.jpg" alt="">
+                        </a>
+                        <a data-fslightbox="gallery" href="img/content/gallery/2.jpg" class="gallery__slide swiper-slide">
+                            <img src="img/content/gallery/2.jpg" alt="">
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    
         <section class="footer__top">
             <div class="container">
                 <div class="footer__top-wrapper">
