--- a/wakebake/index.html
+++ b/wakebake/index.html
@@ -68,7 +68,7 @@
                     <div class="hero-img">
                         <img src="img/content/girl.png" alt="Девушка с тортом">
                         <div class="hero-img_control">
-                            <a class="hero-img_button" data-fslightbox href="media/cake.mp4">
+                            <a class="hero-img_button" data-fslightbox="video" href="media/cake.mp4">
                                 <img src="img/icons/play.svg" alt="">
                             </a>
                             Посмотри, как готовятся наши торты
