--- a/wakebake/index.html
+++ b/wakebake/index.html
@@ -1089,6 +1089,8 @@
             </form>
         </div>
     </div>
+
+    <script src="js/swiper-bundle.min.js"></script>
     <script src="js/fslightbox.js"></script>
     <script src="js/main.js"></script>
 </body>
