--- a/wakebake/index.html
+++ b/wakebake/index.html
@@ -959,7 +959,9 @@
                             </a>
                         </button>
                     </div>
-                    <img src="img/decor/berries-2.png" alt="" class="footer__berry">
+                    <div class="footer__berry-wrapper">
+                        <img src="img/decor/berries-2.png" alt="" class="footer__berry">
+                    </div>
                 </div>
             </div>
         </section>
