--- a/wakebake/index.html
+++ b/wakebake/index.html
@@ -1111,8 +1111,10 @@
                                 <input placeholder="Телефон" type="tel" class="footer__form-input">
                             </label>
                         </form>
-                        <div class="footer__top-radio">
-                            <input type="checkbox" class="footer__radio">
+                        <div class="footer__top-checkbox">
+                            <label for="check">
+                                <input type="checkbox" id="check" class="footer__checkbox">
+                            </label>
                             <div class="radio__text">
                                 Нажимая на кнопку, вы соглашаетесь<br>
                                 с
@@ -1264,6 +1266,7 @@
         </div>
     </div>
 
+    <script src="js/inputmask.min.js"></script>
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/fslightbox.js"></script>
     <script src="js/main.js"></script>
