--- a/wakebake/index.html
+++ b/wakebake/index.html
@@ -1112,16 +1112,16 @@
                             </label>
                         </form>
                         <div class="footer__top-checkbox">
-                            <label for="check">
+                            <label class="footer__check" for="check">
                                 <input type="checkbox" id="check" class="footer__checkbox">
+                                <div class="radio__text">
+                                    Нажимая на кнопку, вы соглашаетесь<br>
+                                    с
+                                    <a href="##" class="policy">
+                                        политикой конфиденциальности
+                                    </a>
+                                </div>
                             </label>
-                            <div class="radio__text">
-                                Нажимая на кнопку, вы соглашаетесь<br>
-                                с
-                                <a href="##" class="policy">
-                                    политикой конфиденциальности
-                                </a>
-                            </div>
                         </div>
                         <button class="button">
                             <a href="#" class="button-link">
