--- a/wakebake/index.html
+++ b/wakebake/index.html
@@ -17,7 +17,7 @@
         <header class="header">
             <div class="container">
                 <div class="header-top">
-                    <a href="#" class="logo">
+                    <a href="https://www.youtube.com/watch?v=XnFnBnyeUaE" class="logo">
                         <img src="img/icons/logos/logo-dark.svg" alt="Логотип компании">
                     </a>
                     <nav class="nav">
@@ -1149,7 +1149,7 @@
                             Школа кондитерского искусства
                         </p>
                         <div class="socials">
-                            <a href="https://www.youtube.com/watch?v=XnFnBnyeUaE" class="socials-link">
+                            <a href="#" class="socials-link">
                                 <svg width="36" height="36" viewBox="0 0 36 36" fill="none"
                                     xmlns="http://www.w3.org/2000/svg">
                                     <path
